@@ -28,6 +28,7 @@ import org.springframework.beans.factory.BeanFactory;
 import org.springframework.beans.factory.BeanFactoryUtils;
 import org.springframework.context.ApplicationContext;
 import org.springframework.core.Ordered;
+import org.springframework.core.annotation.AnnotatedElementUtils;
 import org.springframework.core.annotation.AnnotationUtils;
 import org.springframework.core.annotation.OrderUtils;
 import org.springframework.util.Assert;
@@ -102,7 +103,9 @@ public class ControllerAdviceBean implements Ordered {
 			this.order = initOrderFromBean(bean);
 		}
 
-		ControllerAdvice annotation = AnnotationUtils.findAnnotation(beanType, ControllerAdvice.class);
+		ControllerAdvice annotation = AnnotatedElementUtils.findMergedAnnotation(
+				beanType, ControllerAdvice.class);
+
 		if (annotation != null) {
 			this.basePackages = initBasePackages(annotation);
 			this.assignableTypes = Arrays.asList(annotation.assignableTypes());
